--- a/App/QueueManager/app/build.gradle
+++ b/App/QueueManager/app/build.gradle
@@ -24,4 +24,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0-beta1'
     compile 'com.google.android.gms:play-services-ads:9.0.2'
+
+    compile 'com.google.firebase:firebase-messaging:9.0.0'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
